[gd_scene load_steps=4 format=3 uid="uid://b5gyk0luixoix"]

[ext_resource type="Script" uid="uid://b3i20ptotpomu" path="res://Scripts/mouse.gd" id="1_dev0r"]
[ext_resource type="Texture2D" uid="uid://dtnp8mxn24vau" path="res://Assets/icon.svg" id="2_3ber4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ber4"]
radius = 0.0

[node name="mouse" type="Area2D" groups=["Y_levels"]]
z_index = 3
collision_layer = 14
collision_mask = 5
script = ExtResource("1_dev0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3ber4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_3ber4")

[node name="Ray_cast_top" type="RayCast2D" parent="."]
target_position = Vector2(0, 0.1)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="Ray_cast_left" type="RayCast2D" parent="."]
target_position = Vector2(-0.1, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="Ray_cast_right" type="RayCast2D" parent="."]
target_position = Vector2(0.1, 0.1)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
